# claudeclaw

./: .gitignore  README.md  README_ko.md  claudeclaw  claudeclaw.service  config.json  pyproject.toml  requirements.txt
.claude/rules/: IDENTITY.md
src/: __init__.py  cli.py  config.py  cron.py  daemon.py  discord_bot.py  heartbeat.py  process.py  session_store.py  slack_bot.py  stream.py  utils.py
src/api/: __init__.py  models.py  routes.py
src/commands/: config_cmds.py  cron_cmds.py  daemon_cmds.py  message_cmds.py  session_cmds.py
